--- a/index.html
+++ b/index.html
@@ -64,24 +64,28 @@
         </ul>
     </div>
     <section id="news">
-        <div id="sp-page" class="spBgcover sp-content-1" style="background-color: rgb(255, 255, 255); font-family: Inter, sans-serif; font-weight: 400;">
-            <section id="sp-p5le9m" data-mobile-visibility="#sp-p5le9m|false" data-desktop-visibility="#sp-p5le9m|false" data-mobile-css="" class="sp-el-section " style="max-width: 100%;">
-            <div id="sp-npine1" data-mobile-visibility="#sp-npine1|false" data-desktop-visibility="#sp-npine1|false" data-mobile-css="" class="sp-el-row sm:sp-flex sp-w-full  sp-m-auto sp-justify-between">
-            <div id="sp-m4dl7q" data-mobile-visibility="#sp-m4dl7q|false" data-desktop-visibility="#sp-m4dl7q|false" data-mobile-css="" class="sp-el-col  sp-w-full" style="width: calc(100% + 0px);">
-            <div id="sp-dgxwny" data-mobile-visibility=".sp-custom-html-block-dgxwny|false" data-desktop-visibility=".sp-custom-html-block-dgxwny|false" data-mobile-css="" class="sp-code-wrapper sp-el-block sp-custom-html-block-dgxwny" style="margin: 0px;">
-            <div class="sp-html">
-            <div style="position: relative; width: 100%; height: 0; padding-top: 100.0000%;
-             padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
-             border-radius: 8px; will-change: transform;"><br>
-              <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;" src="https://www.canva.com/design/DAF3ui-0PBk/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen"><br />
-              </iframe>
-            </div>
-            <p><a href="https://www.canva.com/design/DAF3ui-0PBk/view?utm_content=DAF3ui-0PBk&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Processo Seletivo2024.1</a> </p></div>
-            </div>
-            </div>
-            </div>
-            </section>
-            </div>
+        <h1>Processo Seletivo/2ªGraduação</h1>
+        <div style="position: relative; width: 100%; height: 0; padding-top: 100.0000%;
+        padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+        border-radius: 8px; will-change: transform;">
+         <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+           src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGFzd6Dk9Q&#x2F;7YMDbW94U9gE1iLdNz5OEw&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+         </iframe>
+       </div>
+    </section>
+    <section id="subMenu">
+        <div>
+            <h1>PÓS-GRADUAÇÃO</h1>
+        </div>
+        <div>
+            <h1>AVALIAÇÃO INSTITUCIONAL 2023.2</h1>
+        </div>
+        <div>
+            <h1>CALENDÁRIO ACADÊMICO ISCO</h1>
+        </div>
+        <div>
+            <h1>GALERIA DE FOTOS</h1>  
+        </div>
     </section>
     <script src="hide.js"> </script>
     <script src="show.js"> </script>
